--- a/styles.css
+++ b/styles.css
@@ -483,6 +483,7 @@ main {
 
 .instrument-image {
     height: 350px;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -491,9 +492,10 @@ main {
 }
 
 .instrument-image img {
-    width: 100%;
-    height: 100%;
+    width: 100% !important;
+    height: 100% !important;
     object-fit: cover;
+    object-position: center;
     transition: transform 0.5s ease;
 }
 
